react code chnages

--- a/batch4-instagram/index.html
+++ b/batch4-instagram/index.html
@@ -11,3 +11,5 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
+<!-- index.html -- root ---- main.jsx --- root(getElementById)---App.jsx  -->
